--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,36 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-  font-family: 'Permanent Marker', cursive;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Permanent Marker', cursive;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
+#sparky-bg {
+    background-image: url("https://lh3.googleusercontent.com/X3nM2x0C3x0uBSFzek6L82sbkoVS2xOKrj0InUlWI1KxIFY1LvqfBOXAxPhMg0prXkmBdsDwdbJ1umOk-ahEKVBdqlweNor6PuhBRa_LY6_X2bUbokmA0X_4vk4BsOik6-T8AgAi2BUtJrt5WPymaTOrxbt8iiyxhfbE6XIHGloAkfb_B52F7DfUsY-r8Im_uRtC-h68rJdIbieEx_F4ycrSvZNzIHwAeN7TRO1X4bfU_1SwAn6ROaEJdQ0ies39zFauTXEzcdUp4ml2N_cSPryuiMieaHhW96XFu8mHT7-JA0JNQvsgIoa8ZfqIl7hlVx0tilbKsB_czuWtq2mJQEZ_e18aj4R4yqI3vE4mLOz0-yNndZeKNEpDtPQ_OIKIvmXbLAaPMPxfQlIqDda82YQsjqUftWQljgXolM6qWVM3Od7ANvfW1D7C9SL5VnySmgoRlXjGDYwGrPCfC2857MyVhe3dXRb2G93EmK5KeLT0VspUm50DLe1CHj-fkp4NnoXrm1H34UznKLuz9GaajOm8z3wGFy87xm22RDT45N0wDrx5dla4WKS7s9SKPTWcA74cG88rMjrS7_9412m5_7n6WfeMmOkJuTv93t1dkYJytQ5BUqNqPuGrXdvb9TWhJiV1aZzDLlrdQRqJ9TOGXuU9SVYENxNbsLEA-6zJb7khF4VSMuy86vm94BnxiN68z6u0iQ=s2114-w2114-h1532-no?authuser=0");
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -5;
+    background-position-y: 70%;
+    /* background-position-x: 0vw; */
+    opacity: 0.2;
+}
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+@media screen and (max-width: 1200px) {
+    #sparky-bg {
+        background-image: url("https://lh3.googleusercontent.com/F8TyseH4KQ7aC05SBeViDrRQerafGeS9kc-dGDnE3Q8DDHs3QgdKz19wN6RTVYcx5KL92mK-KMzlevKi3iDZnuRWc4ckvbD6hyXkUMZJpKQ0-Mydy_dRX3aP0lAhg7m2qfQNuNX58L2j1JdPJMfsII0PYpoeGlI6Q7VwfWsM274JK3iL8tj7yKsWfVPnUJQASLgY1IiieEQySh1-ArdrVctHhVxNCwsk51Q2HaHioySGdEX0da0tvmUwknoDNemZTm2bYOAx92EiXWkK92Xz_U38ZiiCUa4-cht6RZbke-y_emah8U8TAtRDpYsC1t4kpYlEHIsXmKc0SHcfBVQdeL8rbuNtR-E-Or7t--5kCSQJZ8Qw5Ceh3O6xSSSQwdAvs15VSJpIlmVxi4FsrE55tRUFPLj4EKTJ8vozk8cMtsKZ9F0MRbyH4h8hvcDdjSvbVGWoUN8Fy_qLUjPgNyc2Ul5JGIR6UsTTmxNwPZK54cpTsQ7ceohI9oiZKOQsl1qwAE65cU7Kvfz0dqz_wJC15xwTNiliJuib2uOuXjCEu4MNeRHRN4Oi07fqveyAdN9FhH5kC2Uk16fwqzo-AUd09bDTBzPntk5tOl2IylwaRiC2P_PbWiBRHJYDNxuhF0eYubqdTcE6Gzh_RbWQDOxQFNEGmwJECnCqaUCn515fAOHqvZwxv72o_T8cVtFG=w1342-h1532-no?authuser=0");
+        background-position-y: 30%;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    #sparky-bg {
+        background-size: cover;
+    }
 }
