--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
 
 #sparky-bg {
     /* temporary online hosted img, need local assets */
-    background-image: url("https://lh3.googleusercontent.com/CPgsQgk3lbg_V_qmHpj_4GT_myBVr5jP7Ly-O5OxuRtt63PDCAOwR7w-5zilVzVXcnLcXfDaZjG_5mNahwYYOUhmfo-gxjQZt0jqCY81zxjw08t1PoaKYSQX0plxtS7SWGJhcSrWFHQLNsg-rX8j8Mg3LRO772xTD_KU5vv73Ltypk_xLiXpqazaXYWsK9C6l3v1xMndB5h5EO4RNP_JzD2xth3pYa_oO7peHXjh6skv9X9yYM7heMaeuDZIZI_j5C1bMuCAfaYvYV4jkQpYpn1nCvYqwQcZ3SvxPAAtbemavgAtnT2wN5QHSJaWD7dWm2En5Y6PZDzdwIZW60s7jvB_G1j3eV5MU80gZT3E6GimC0eL5ggOKsWea9U7MeyK0InUQM2U2P4o0pfiJ4Q3Yg_Aqz-8AiqkytX5uDW0f716-sQZTmlL1x9X8KLNK05Uc1EoDidqnRv9Fnf1iI4FykQrpP-fW12lw0P6fNu8yZDRz4UYPBTChq6K6lONWG_qaHYe4RIq_e7kzUyyu9oPEWxLmLGu_mXQALclKNfy-4N_Jm-aghTwcqcXLY6mVEW97wB8jNuJYGf164og73_V2HNPbwE7D9JmUroScYdN0SeLK3Uw_Nd9e2zA5LamJnIPRkeqUZ7yiYMbWToeXJOT836NedvwMowh_I9vRt8H-9SA8H5aptOqgU3ofXbZ=w2120-h1532-no?authuser=0");
+    background-image: url("./images/sparkbg1.jpg");
     width: 100%;
     height: 100%;
     position: fixed;
@@ -25,7 +25,7 @@ code {
 @media screen and (max-width: 1200px) {
     #sparky-bg {
         /* temporary online hosted img, need local assets */
-        background-image: url("https://lh3.googleusercontent.com/F8TyseH4KQ7aC05SBeViDrRQerafGeS9kc-dGDnE3Q8DDHs3QgdKz19wN6RTVYcx5KL92mK-KMzlevKi3iDZnuRWc4ckvbD6hyXkUMZJpKQ0-Mydy_dRX3aP0lAhg7m2qfQNuNX58L2j1JdPJMfsII0PYpoeGlI6Q7VwfWsM274JK3iL8tj7yKsWfVPnUJQASLgY1IiieEQySh1-ArdrVctHhVxNCwsk51Q2HaHioySGdEX0da0tvmUwknoDNemZTm2bYOAx92EiXWkK92Xz_U38ZiiCUa4-cht6RZbke-y_emah8U8TAtRDpYsC1t4kpYlEHIsXmKc0SHcfBVQdeL8rbuNtR-E-Or7t--5kCSQJZ8Qw5Ceh3O6xSSSQwdAvs15VSJpIlmVxi4FsrE55tRUFPLj4EKTJ8vozk8cMtsKZ9F0MRbyH4h8hvcDdjSvbVGWoUN8Fy_qLUjPgNyc2Ul5JGIR6UsTTmxNwPZK54cpTsQ7ceohI9oiZKOQsl1qwAE65cU7Kvfz0dqz_wJC15xwTNiliJuib2uOuXjCEu4MNeRHRN4Oi07fqveyAdN9FhH5kC2Uk16fwqzo-AUd09bDTBzPntk5tOl2IylwaRiC2P_PbWiBRHJYDNxuhF0eYubqdTcE6Gzh_RbWQDOxQFNEGmwJECnCqaUCn515fAOHqvZwxv72o_T8cVtFG=w1342-h1532-no?authuser=0");
+        background-image: url("./images/sparkybg2.jpg");
         background-position-y: 30%;
     }
 }
